# HPMS-T

./: CMakeLists.txt  LICENSE  README.md
docs/: performances-tests.txt  roadmap.txt
modules/BackendImpl/: CMakeLists.txt
modules/BackendImpl/include/engine/: FrameBufferImpl.h  GameRunnerImpl.h  RendererImpl.h  RenderingWorkflow.h  RenderingWorkflowFactory.h  WindowImpl.h
modules/BackendImpl/include/engine/resource/: ResourceSupplierImpl.h  ResourcesImpl.h  TextureImpl.h
modules/BackendImpl/include/engine/workflow/: PictureDataRenderingWorkflow.h  PictureRenderingWorkflow.h  SpriteDataRenderingWorkflow.h  TilesChunkDataRenderingWorkflow.h  TilesPoolRenderingOptimizer.h  TilesPoolRenderingWorkflow.h  VertexBufferProvider.h
modules/BackendImpl/src/engine/: FrameBufferImpl.cpp  GameRunnerImpl.cpp  RendererImpl.cpp  WindowImpl.cpp
modules/BackendImpl/src/engine/resource/: TextureImpl.cpp
modules/BackendImpl/src/engine/workflow/: PictureDataRenderingWorkflow.cpp  PictureRenderingWorkflow.cpp  SpriteDataRenderingWorkflow.cpp  TilesChunkDataRenderingWorkflow.cpp  TilesPoolRenderingOptimizer.cpp  TilesPoolRenderingWorkflow.cpp  VertexBufferProvider.cpp
modules/Main/: CMakeLists.txt
modules/Main/include/base/: AppError.h  Defs.h  FileSystem.h  Files.h  Logs.h  Math.h  Memory.h  PacksHandler.h  Resource.h  ResourcesHandler.h  Strings.h  Utils.h
modules/Main/include/ecs/: Component.h  Entity.h  System.h  SystemFactory.h  World.h
modules/Main/include/ecs/component/: Animation.h  Camera.h  Components.h  Graphics.h  Movable.h  Picture.h  Sprite.h  TileMap.h  TilesMap.h
modules/Main/include/ecs/system/: RenderSystem.h  Systems.h
modules/Main/include/engine/: Drawable.h  FrameBuffer.h  GameLogic.h  GameRunner.h  InputHandler.h  NativeData.h  Renderer.h  Tile.h  Window.h
modules/Main/include/engine/renderable/: PictureData.h  PictureQuad.h  SimpleSprite.h  SpriteData.h  TilesChunkData.h  TilesPool.h
modules/Main/include/engine/resource/: ResourceSupplier.h  Resources.h  Texture.h
modules/Main/src/base/: FileSystem.cpp  Files.cpp  Logs.cpp  PacksHandler.cpp  ResourcesHandler.cpp  Strings.cpp
modules/Main/src/ecs/system/: RenderSystem.cpp
modules/Main/src/engine/renderable/: PictureData.cpp  PictureQuad.cpp  SimpleSprite.cpp  SpriteData.cpp  TilesChunkData.cpp  TilesPool.cpp
modules/Runtime/: CMakeLists.txt
modules/Runtime/src/rt/: Main.cpp
modules/Tests/: CMakeLists.txt
modules/Tests/include/testing/: TestLogic.h
modules/Tests/src/testing/: TestRunner.cpp
